argocd/aws/203403084713/clusters/cbioportal-prod/apps/vibe-vep/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: vibe-vep-ingress
  namespace: genome-nexus
spec:
  rules:
    - host: vibe-vep.genomenexus.org
      http:
        paths:
          - backend:
              service:
                name: vibe-vep
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - vibe-vep.genomenexus.org
      secretName: vibe-vep-cert
